--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,4 +63,5 @@
     // "newLine": "crlf",                                /* Set the newline character for emitting files. */
     // "stripInternal": true,                            /* Disable emitting declarations that have '@internal' in their JSDoc comments. */
     // "noEmitHelpers": true,                            /* Disable generating custom helper functions like '__extends' in compiled output. */
-    // "noEmitOnError": true,                            /* Disable emitting files if any type c
+    // "noEmitOnError": true,                            /* Disable emitting files if any type checking errors are reported. */
+  
