--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,4 +64,5 @@
     // "stripInternal": true,                            /* Disable emitting declarations that have '@internal' in their JSDoc comments. */
     // "noEmitHelpers": true,                            /* Disable generating custom helper functions like '__extends' in compiled output. */
     // "noEmitOnError": true,                            /* Disable emitting files if any type checking errors are reported. */
-    // "preserveConstEnums": true,                       /* Disable erasing 'const enum' d
+    // "preserveConstEnums": true,                       /* Disable erasing 'const enum' declarations in generated code. */
+    //
