--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,4 +70,4 @@
 
     /* Interop Constraints */
     // "isolatedModules": true,                          /* Ensure that each file can be safely transpiled without relying on other imports. */
-    // "allowSyntheticDefaultImports": true,             /* Allow 'import x from y' 
+    // "allowSyntheticDefaultImports": true,             /* Allow 'import x from y' when a module doesn't hav
