--- a/tsconfig.json
+++ b/tsconfig.json
@@ -76,4 +76,5 @@
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
 
     /* Type Checking */
-    "strict": true,                                      /* Enable all strict type
+    "strict": true,                                      /* Enable all strict type-checking options. */
+    //
