--- a/tsconfig.json
+++ b/tsconfig.json
@@ -77,4 +77,4 @@
 
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
-    // "noImplicitAny": true,                            /* Enable error reporting for expressions
+    // "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an i
