--- a/tsconfig.json
+++ b/tsconfig.json
@@ -83,4 +83,4 @@
     // "strictBindCallApply": true,                      /* Check that the arguments for 'bind', 'call', and 'apply' methods match the original function. */
     // "strictPropertyInitialization": true,             /* Check for class properties that are declared but not set in the constructor. */
     // "noImplicitThis": true,                           /* Enable error reporting when 'this' is given the type 'any'. */
-    // "useUnknownInCatchVariables": true, 
+    // "useUnknownInCatchVariables": true,               /* Default catch clause
