--- a/tsconfig.json
+++ b/tsconfig.json
@@ -84,4 +84,4 @@
     // "strictPropertyInitialization": true,             /* Check for class properties that are declared but not set in the constructor. */
     // "noImplicitThis": true,                           /* Enable error reporting when 'this' is given the type 'any'. */
     // "useUnknownInCatchVariables": true,               /* Default catch clause variables as 'unknown' instead of 'any'. */
-    // "alwaysStrict": true,                           
+    // "alwaysStrict": true,                             /* Ensure 'use strict' is always e
