--- a/tsconfig.json
+++ b/tsconfig.json
@@ -85,4 +85,4 @@
     // "noImplicitThis": true,                           /* Enable error reporting when 'this' is given the type 'any'. */
     // "useUnknownInCatchVariables": true,               /* Default catch clause variables as 'unknown' instead of 'any'. */
     // "alwaysStrict": true,                             /* Ensure 'use strict' is always emitted. */
-    // "noUnusedLocals": true,            
+    // "noUnusedLocals": true,                           /* Enable error r
