--- a/tsconfig.json
+++ b/tsconfig.json
@@ -86,4 +86,4 @@
     // "useUnknownInCatchVariables": true,               /* Default catch clause variables as 'unknown' instead of 'any'. */
     // "alwaysStrict": true,                             /* Ensure 'use strict' is always emitted. */
     // "noUnusedLocals": true,                           /* Enable error reporting when local variables aren't read. */
-    // "noUnusedParameters": true,                       /* Raise an error when
+    // "noUnusedParameters": true,                       /* Raise an error when a function parameter isn't read. 
