--- a/tsconfig.json
+++ b/tsconfig.json
@@ -90,4 +90,4 @@
     // "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
     // "noImplicitReturns": true,                        /* Enable error reporting for codepaths that do not explicitly return in a function. */
     // "noFallthroughCasesInSwitch": true,               /* Enable error reporting for fallthrough cases in switch statements. */
-    // "noUnc
+    // "noUncheckedIndexedAccess": true,           
