--- a/tsconfig.json
+++ b/tsconfig.json
@@ -93,4 +93,4 @@
     // "noUncheckedIndexedAccess": true,                 /* Add 'undefined' to a type when accessed using an index. */
     // "noImplicitOverride": true,                       /* Ensure overriding members in derived classes are marked with an override modifier. */
     // "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type. */
- 
+    // "allowUnusedLabels": true, 
