--- a/tsconfig.json
+++ b/tsconfig.json
@@ -97,4 +97,4 @@
     // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
 
     /* Completeness */
-   
+    // "skipDefaultLibCheck": 
