--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,4 +101,5 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": ["src"],
-  "exclude": ["node_modules","**/_
+  "exclude": ["node_modules","**/__test__/s*"]
+}
